fix: main.css overflow 속성 추가

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -57,6 +57,7 @@
 .swiper-container{
   width: 100%;
   margin: 20px 0;
+  overflow: hidden;
 }
 
 /* 스위퍼 페이지 1개 영역 크기 설정 */
